# Budget-Tracker

./: .gitignore  App.py  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Default.db  README.md  STRUCTURE.md  Text2.db  budget.db  budget_tracker.db  database.py  main.py  presentation,.py  pyproject.toml  requirements.txt
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: breaking_change.yaml  bug_report.yaml  documentation.yaml  new_feature.yaml  refactoring.yaml
src/: Main.py
src/utils/: Components.py  Database.py  Export.py  Visualization.py
warlo/: pyvenv.cfg
warlo/Scripts/: activate  activate.bat
